; ModuleID = '/home/carl/AnghaBench/micropython/ports/powerpc/extr_uart_lpc_serial.c_lpc_uart_write.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/powerpc/extr_uart_lpc_serial.c_lpc_uart_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_RBR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lpc_uart_write(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  br label %3

3:                                                ; preds = %6, %1
  %4 = call i64 (...) @lpc_uart_tx_full()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %3
  br label %3

7:                                                ; preds = %3
  %8 = load i32, i32* @REG_RBR, align 4
  %9 = load i8, i8* %2, align 1
  %10 = call i32 @lpc_uart_reg_write(i32 %8, i8 signext %9)
  ret void
}

declare dso_local i64 @lpc_uart_tx_full(...) #1

declare dso_local i32 @lpc_uart_reg_write(i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
